@@ -1,3 +1,8 @@
+2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/plot/dial/AbstractDialLayer.java
+	(hashCode): Implemented.
+
 2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/data/statistics/DefaultBoxAndWhiskerXYDataset.java
